[package]
name = "dds"
version = "0.1.0"
authors = ["mechaxl", "ScottyThePilot <scotty.codes@gmail.com>"]
description = "Decodes DirectDraw Surface files"
keywords = ["dds", "directdraw"]
categories = ["game-engines", "multimedia::images"]
edition = "2018"
license = "LGPL-3.0"

[lib]
name = "dds"
path = "src/lib.rs"

[dependencies]
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"

[dependencies.image]
version = "0.23"
default-features = false

[dev-dependencies.image]
version = "0.23"
default-features = false
features = ["png"]
